[package]
name = "rg-replace"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "^1", features = ["derive"] }
tokio = { version = "^1", features = ["macros", "rt-multi-thread", "sync", "parking_lot"] }
regex = "^1"
gray_matter = "^0"
rand = "^0"
scru128 = "^2"
clap = { version = "^4", features = ["derive"] }
async-std = { version = "^1", features = ["attributes", "tokio1"] }
lazy_static = "^1"
anyhow = "1"
